# envforge

./: .envforge.yaml  Cargo.toml  README.md  USAGE.md  WALKTHROUGH.md  build.rs  justfile
.github/workflows/: mirror-to-codeberg.yml
examples/: cpp-dev.yaml  node-dev.yaml  python-dev.yaml
src/: main.rs
src/cli/: commands.rs
src/config/: loader.rs  mod.rs
src/environment/: activate.rs  mod.rs
src/executor/: mod.rs  shell.rs
src/installer/: apt.rs  brew.rs  mod.rs  pacman.rs  trait.rs
